# word_counter_c

./: CMakeLists.txt
source/: add_word.c  dump_word.c  finalize.c  get_word.c  get_word.h  initialize.c  word_main.c  word_manager.h  word_manager_p.h
